--- a/Demo_5/Web.config
+++ b/Demo_5/Web.config
@@ -4,6 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <!--<system.web.extensions>
+    
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000"/>
+      </webServices>
+    </scripting>
+  </system.web.extensions>-->
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -12,6 +20,13 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Demo_5-20200725111331.mdf;Initial Catalog=aspnet-Demo_5-20200725111331;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+      
+    </webServices>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
